web-infras/parser/tests/fixtures/babel/core/scope/dupl-bind-2nd-lvl-var-nested/output.txt
[SyntaxError]: Identifier has already been declared. (4,7)
4|  var foo = 1;
 |     ^
